k8s/apps/jellyfin/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-dlna
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: jellyfin
  annotations:
    external-dns.alpha.kubernetes.io/hostname: media.${SECRET_DOMAIN}
spec:
  type: LoadBalancer
  ports:
    - port: 1900
      targetPort: 1900
      protocol: UDP
      name: dlna
    - port: 8096
      targetPort: 8096
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: jellyfin
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-http
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: jellyfin
spec:
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: jellyfin
